# os_in_rust

./: Cargo.toml  x86_64-blog_os.json
.Cargo/: config
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
