[package]
name = "blog_os"
version = "0.1.0"
authors = ["Riton <ritonelion@outlook.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",#设置退出码出口
    "-serial", "stdio",#重定位输出
    "-display", "none" #设置qemu不再显示
]
test-success-exit-code = 33
